	#-costruire il circuito a partire da un file
	-leggere da file anche le macchine
	-chiamare la lettura da file e costruire macchine+circuito (lo facciamo fare al circuit)
		#-task bootstrap che nasce, crea circuito && macchine && da il via && muore
	-calcolare il towait (referee_p.adb)
	-implementare lista di macchine correntemente in un segmento (nel referee, memorizzando solo le id)
	-rimuovere la macchina quando chiama leaveSegment, dalla lista di cui sopra
	-aggiungere casualità nel cambio di tempo

